<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2575EC"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/calculator_icon"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:srcCompat="@mipmap/ic_calculator" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="64dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/basic_calculator"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/primary"
        android:layout_marginHorizontal="16dp"
        app:hintTextColor="@color/white">

        <EditText
            android:id="@+id/et_operator1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="0.0"
            android:ems="10"
            android:textSize="24sp"
            android:gravity="end"
            android:hint="@string/primeiro_operando"
            android:inputType="numberDecimal"
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/primary"
        android:layout_marginHorizontal="16dp"
        app:hintTextColor="@color/white">

        <EditText
            android:id="@+id/et_operator2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="0.0"
            android:ems="10"
            android:gravity="end"
            android:textSize="24sp"
            android:hint="@string/segundo_operando"
            android:inputType="numberDecimal"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calcular"
            android:textColor="@color/white"
            app:backgroundTint="#DA702A" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <TextView
        android:id="@+id/tv_result_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/resultado"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        tools:text="0.0" />

</LinearLayout>